--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   adaptive_navbar: ^0.0.3
   scroll_to_index: ^3.0.1
+  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_test:
